# fbthrift-example

./: .gitignore  CMakeLists.txt
cpp2/: CMakeLists.txt
cpp2/client/: ChatRoomClient.cpp  EchoClient.cpp  StorageClient.cpp
cpp2/server/: ChatRoomService.cpp  EchoService.cpp  ExampleServer.cpp  StorageService.cpp  StorageService.h
cpp2/test/: ChatRoomTest.cpp  EchoTest.cpp
cpp2/util/: Util.h
if/: CMakeLists.txt  storage.thrift
